--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12",
     "session": "^0.1.0",
-    "static": "^2.0.0"
+    "static": "^2.0.0",
+    "twilio": "^3.67.2"
   },
   "engines": {
     "node": "10.19.0"
