--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon app.js",
-    "start:prod": "nodemon app.js"
+    "start": "nodemon app.js",
+    "start:prod": "NODE_ENV=production nodemon app.js"
   },
   "author": "Dennis Williams",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-session": "^2.0.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "https": "^1.0.0",
+    "json": "^11.0.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12",
+    "passport": "^0.5.2",
     "session": "^0.1.0",
     "twilio": "^3.67.2"
   },
